Fixed：修改结构目录

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>order-ribbon</module>
         <module>order-openfeign</module>
         <module>gateway</module>
+        <module>practice</module>
     </modules>
     <!--<parent>
         <groupId>org.springframework.boot</groupId>
